# stm32f3-discovery-sensors-embassy-async

./: Cargo.toml  LICENSE  README.md
src/: main.rs  tasks_ds3231.rs  tasks_i3g4250d.rs  tasks_lsm303agr.rs
