[package]
name = "stm32f3-discovery-compass-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Low level MCU libraries for linking against. Not used directly.
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

# For logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"
# For logging panics
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Drivers
lsm303agr = { version = "1.1.0", features = ["async"] }
i3g4250d = "0.3.0"

# Embassy
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.2.0", features = ["stm32f303vc", "memory-x", "time-driver-tim2"] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime"] }

# For lazy compile time initialization of globals
static_cell = "2.1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

